src/ty/snapshots/tvm__ty__tests__literal_none.snap
---
source: src/ty/tests.rs
expression: "check!(r#\"\n    let v = none;\n  \"#)"
---
fn __main__() {
  let v: none = none;
}
