src/ty/snapshots/tvm__ty__tests__literal_num.snap
---
source: src/ty/tests.rs
expression: "check!(r#\"\n    let v = 10.5;\n  \"#)"
---
let v = /*num*/10.5;

