src/ty/snapshots/tvm__ty__tests__literal_str.snap
---
source: src/ty/tests.rs
expression: "check!(r#\"\n    let v = \"test\";\n  \"#)"
---
fn __main__() {
  let v: str = "\"test\"";
}
