src/ty/snapshots/tvm__ty__tests__primitives.snap
---
source: src/ty/tests.rs
expression: "check!(r#\"\n        0;\n        1.2;\n        true;\n        \"test\";\n    \"#)"
---
Hir {
    top_level: Block {
        body: [
            Int(
                0,
            ),
            Num(
                1.2,
            ),
            Bool(
                true,
            ),
            Str(
                "test",
            ),
        ],
        tail: None,
    },
}
