src/ty/snapshots/tvm__ty__tests__use_var.snap
---
source: src/ty/tests.rs
expression: "check!(r#\"\n    let v = 1;\n    v;\n  \"#)"
---
let v = 1/*int*/;
v/*int*/;

